tests/paczka1/fuzzy1/43759955.err
Error in line 16: Ej9e3d6 A447 72,5
Error in line 25: Ej9e3d6 A524 -1,6
Error in line 21: Ej9e3d6 A524 38,2
Error in line 33: 2TBKpf3 A524 58,7
